fix learner session reentry
